--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This svn repository contains all my little ruby scripts
+This repository contains all my little ruby scripts
 
-http://code.google.com/p/rubymlib/
+http://github.com/micktaiwan/rubymlib
 
